# plotbot

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  Path Tracking  README.md  RobotControlAppGUI.py  dependencies.repos  merge-cc.sh
.cache/clangd/index/: exponential_moving_average.h.1CE4E200738969E4.idx  plotbot_hw_interface.cpp.C254E667FFD2FB75.idx  plotbot_hw_interface.h.CE0E7B2E503F889C.idx  plotbot_hw_interface_node.cpp.A29FF14334B1139E.idx
plotbot/: CMakeLists.txt  package.xml
plotbot_base/: CMakeLists.txt  package.xml  rtabmap.launch
plotbot_base/launch/: base.launch  imu.launch  kinect.launch
plotbot_control/: CMakeLists.txt  package.xml
plotbot_control/config/: control.yaml  robot_localization.yaml
plotbot_control/launch/: control.launch  teleop.launch
plotbot_description/: CMakeLists.txt  package.xml
plotbot_description/launch/: description.launch
plotbot_description/meshes/: left_wheel.STL  left_wheel.dae  right_wheel.STL  right_wheel.dae
plotbot_description/urdf/: PlotBot-R1.SLDASM.csv  plotbot_description.urdf.xacro
plotbot_gazebo/: CMakeLists.txt  package.xml
plotbot_gazebo/launch/: empty_world.launch  spawn_plotbot.launch
plotbot_gazebo/rviz/: viz.rviz
plotbot_hw_interface/: CMakeLists.txt  README.md  deliverbot_hw_interface_plugin.xml  package.xml
plotbot_hw_interface/include/plotbot_hw_interface/: exponential_moving_average.h  plotbot_hw_interface.h
plotbot_hw_interface/scripts/: motorDriver.py  rotaryEncoder.py
plotbot_hw_interface/src/: plotbot_hw_interface.cpp  plotbot_hw_interface_node.cpp
