<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>plotbot_control</name>
  <version>1.0.0</version>
  <description>Plotter Bot.</description>
  <maintainer email="yasinyagin@gmail.com">Yasin Yagin</maintainer>
  <license>BSD</license>

  <author>Yasin Yagin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robot</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>interactive_marker_twist_server</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>twist_mux</exec_depend>


</package>