<?xml version="1.0"?>
<package format="2">
  <name>plotbot_hw_interface</name>
  <version>1.0.0</version>
  <description>plotbot hardware interfaces</description>
  <maintainer email="SBGRP-git@g.softbank.co.jp">SoftBank Corp.</maintainer>
  <author email="yuki.st16@gmail.com">Yuki Onishi</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslint</depend>

  <depend>roscpp</depend>
  <depend>hardware_interface</depend>
  <depend>sensor_msgs</depend>
  <depend>joint_limits_interface</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>urdf</depend>
  <test_depend>roslint</test_depend>

  <export>
    <hardware_interface plugin="${prefix}/plotbot_hw_interface_plugin.xml"/>
  </export>
</package>
